# rusty-lambda

./: .gitignore  Cargo.toml  README.md  all.sh  compile-and-deploy.sh  compile-lambda.sh  compile.sh  copy-output.sh  deploy.sh  package.sh
.github/workflows/: rust.yml
rust-lambda-compiler/: Dockerfile  build.sh  deploy.sh
src/: main.rs
